--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,3 @@
-cmake_minimum_required(VERSION 3.26)
-project(data LANGUAGES CXX)
-
-set(CMAKE_CXX_STANDARD 20)
-
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake")
-set(CMAKE_VERBOSE_MAKEFILE True)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
-        CACHE STRING "Vcpkg toolchain file" -G Ninja)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin.dbg)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin.relwithdbg)
-
-# Set the vcpkg triplet
-set(VCPKG_TARGET_TRIPLET "x64-windows" CACHE STRING "Vcpkg target triplet")
-
-
 add_subdirectory(data)
 add_subdirectory(prj.test)
 
@@ -28,17 +7,15 @@ add_custom_target(build_all
         COMMENT "Building all targets..."
 )
 
-install(TARGETS data DESTINATION bin)
-install(DIRECTORY data/include/ DESTINATION include/data)
-install(FILES data/data.cpp DESTINATION data)
-
 install(DIRECTORY prj.test/ DESTINATION bin/prj.test)
 install(FILES prj.test/test.cpp DESTINATION bin/prj.test)
 install(FILES prj.test/CMakeLists.txt DESTINATION bin/prj.test)
+
+install(TARGETS data DESTINATION bin)
+install(DIRECTORY data/include/ DESTINATION include/data)
+install(FILES data/data.cpp data/include/data/data.hpp DESTINATION include/data)
 
 
 # Install CMakeLists.txt files
 install(FILES CMakeLists.txt DESTINATION .)
 install(FILES data/CMakeLists.txt DESTINATION data)
-install(FILES prj.test/CMakeLists.txt DESTINATION prj.test)
-
