--- a/generation/visualization/CMakeLists.txt
+++ b/generation/visualization/CMakeLists.txt
@@ -4,10 +4,11 @@ target_include_directories(visualization PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
-#vtk_module_autoinit(
- # TARGETS  visualisation
- # MODULES ${VTK_LIBRARIES}
-#)
-include_directories( "${VCPKG_ROOT}/installed/x64-windows/include")
+include_directories("${VCPKG_ROOT}/installed/x64-windows/include")
+target_link_libraries(visualization ${VTK_LIBRARIES})
+install(TARGETS visualization)
 
- target_link_libraries(visualization  ${VTK_LIBRARIES})
+vtk_module_autoinit(
+  TARGETS  visualization
+  MODULES ${VTK_LIBRARIES}
+)
