--- a/generation/CMakeLists.txt
+++ b/generation/CMakeLists.txt
@@ -1,25 +1,25 @@
 cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
 
-##option(BUILD_DOC "Build documentation" ON)
+#option(BUILD_DOC "Build documentation" ON)
 
-##find_package(Doxygen)
+#find_package(Doxygen)
 
-##if (DOXYGEN_FOUND)
-  ##  set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+#if (DOXYGEN_FOUND)
+  #  set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 
-##configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile ${DOXYGEN_OUT} @ONLY)
+#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile ${DOXYGEN_OUT} @ONLY)
     
-  ##message("Doxygen build started")
+  #message("Doxygen build started")
 
-    ##add_custom_target(doc_doxygen ALL
-      ##  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-      ##  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-      ##  COMMENT "Generating API documentation with Doxygen"
-     ##   VERBATIM
-    ##)
-##else (DOXYGEN_FOUND)
-  ##  message("Doxygen need to be installed to generate the doxygen documentation")
-##endif (DOXYGEN_FOUND)
+    #add_custom_target(doc_doxygen ALL
+      #  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+      #  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+      #  COMMENT "Generating API documentation with Doxygen"
+     #   VERBATIM
+    #)
+#else (DOXYGEN_FOUND)
+  #  message("Doxygen need to be installed to generate the doxygen documentation")
+#endif (DOXYGEN_FOUND)
 
 project(generation)
 
@@ -225,16 +225,16 @@ vtk_module_autoinit(
   MODULES ${VTK_LIBRARIES}
 )
 
-##set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
-##set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+#set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
+#set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 
-##add_custom_target(
-  ##  documentation
-  ##  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
-  ##  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-  ##  COMMENT "Generating API documentation with Doxygen"
-  ##  VERBATIM
-##)
+#add_custom_target(
+  #  documentation
+  #  COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
+  #  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  #  COMMENT "Generating API documentation with Doxygen"
+  #  VERBATIM
+#)
 
-##add_dependencies(visualization documentation)
+#add_dependencies(visualization documentation)
 
