--- a/generation/visualization/CMakeLists.txt
+++ b/generation/visualization/CMakeLists.txt
@@ -5,12 +5,11 @@ target_include_directories(visualization PUBLIC
   $<INSTALL_INTERFACE:include>
 )
 include_directories("${VCPKG_ROOT}/installed/x64-windows/include")
-target_link_libraries(visualization ${VTK_LIBRARIES})
+target_link_libraries(visualization PUBLIC ${VTK_LIBRARIES})
 set_target_properties(visualization PROPERTIES OUTPUT_NAME "visualization")
 install(TARGETS visualization)
 
 include("${VTK_USE_FILE}")
-target_link_libraries(visualization PRIVATE ${VTK_LIBRARIES})
 
 vtk_module_autoinit(
   TARGETS  visualization
