--- a/generation/visualization/CMakeLists.txt
+++ b/generation/visualization/CMakeLists.txt
@@ -3,6 +3,7 @@ set_property(TARGET visualization PROPERTY CXX_STANDARD 20)
 target_include_directories(visualization PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
+  ${VTK_INCLUDE_DIRS}
 )
 include_directories("${VCPKG_ROOT}/installed/x64-windows/include")
 find_package(VTK COMPONENTS 
