--- a/generation/prj.test/CMakeLists.txt
+++ b/generation/prj.test/CMakeLists.txt
@@ -1,9 +1,8 @@
- 
-add_executable(test test.cpp)
+add_executable(datatest  datatest.cpp)
 
-target_link_libraries(test PRIVATE data)
-target_link_libraries(test PRIVATE visualization)
-target_include_directories(test PRIVATE
+target_link_libraries(datatest PRIVATE data)
+target_link_libraries(datatest PRIVATE visualization)
+target_include_directories(datatest PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/../data/include
         ${CMAKE_CURRENT_SOURCE_DIR}/../visualization/include
         "${VTK_DIR}/../../include/vtk-9.2"
